# RawEngine

./: .gitignore  .gitmodules  CMakeLists.txt
Dependencies/: CMakeLists.txt
RawEngine/: CMakeLists.txt
RawEngine/include/RawEngine/: AssetManager.hpp  Component.hpp  Engine.hpp  Entity.hpp  Event.hpp  EventManager.hpp  Events.hpp  Input.hpp  InputManager.hpp  Mesh.hpp  MeshLoader.hpp  Module.hpp  RawEngine.hpp  Scene.hpp  SceneManager.hpp  Shader.hpp  ShaderLoader.hpp  Window.hpp  WindowManager.hpp
RawEngine/include/RawEngine/Manager/: AssetManager.hpp  SceneManager.hpp
RawEngine/include/RawEngine/Scene/: Entity.hpp  Scene.hpp
RawEngine/src/: asset_manager.cpp  camera.cpp  component.cpp  engine.cpp  entity.cpp  event.cpp  event_manager.cpp  events.cpp  input.cpp  input_manager.cpp  map_enums.cpp  mesh.cpp  mesh_loader.cpp  model.cpp  module.cpp  scene.cpp  scene_manager.cpp  shader.cpp  shader_loader.cpp  transform.cpp  window.cpp  window_manager.cpp
Test/: CMakeLists.txt
Test/assets/: config.yaml  cube_fragment.glsl  cube_vertex.glsl  input.yaml
Test/assets/meshes/: cube.yaml
Test/assets/meshes/cube/: cube.mtl
Test/assets/scenes/: entry.yaml
Test/assets/shaders/: simple.yaml
Test/assets/shaders/simple/: fragment.glsl  vertex.glsl
Test/src/: main.cpp
